Add basic styling to button

--- a/src/styling/_variables.scss
+++ b/src/styling/_variables.scss
@@ -2,6 +2,8 @@
 
 // Colors
 $base-background: #35654d;
+$button-bg-color: #e0c29c;
+$button-border-color: #27425d;
 
 // Fonts
 $base-font: 'Rye', serif;
