--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -35,15 +35,14 @@
 
 .player-hand {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  // flex-direction: column;
+  justify-content: flex-end;
   width: 50%;
 }
 
 .dealer-hand {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  // flex-direction: column;
   width: 50%;
 }
 
@@ -78,11 +77,10 @@ h2 {
   margin-top: 20px;
 }
 
-.card {
-  display: inline-block;
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid #000;
-  border-radius: 5px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+.card-icon {
+  font-size: 4rem;
+}
+
+.hidden-card {
+  font-size: 3.5rem;
 }
