--- a/src/styling/_variables.scss
+++ b/src/styling/_variables.scss
@@ -4,6 +4,9 @@
 $base-background: #35654d;
 $button-bg-color: #e0c29c;
 $button-border-color: #27425d;
+$button-hover-color: red;
+$button-bg-hover: #232b2b;
+$button-hover-border: black;
 
 // Fonts
 $base-font: 'Rye', serif;
