--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -2,12 +2,12 @@
 
 .App {
   text-align: center;
-  font-family: $base-font;
   display: flex;
   flex-direction: column;
   max-height: 85vh;
 
   h4 {
+    font-size: $text-size-xxl;
     margin: 0;
   }
 }
@@ -18,7 +18,7 @@
   background-color: $base-background;
   border-radius: 500px;
   margin: 2rem auto;
-  border: 5px solid black;
+  box-shadow: 0 0 0 2px #ffd700, 0 0 0 12px #673622, 0 0 0 18px #53220e;
 }
 
 .section-outputs {
@@ -28,22 +28,12 @@
   justify-content: center;
 }
 
-.section-inputs {
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: flex-end;
-}
-
 .hands {
   height: 20vh;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   gap: 5rem;
-
-  p {
-    margin: 0.25rem;
-  }
 }
 
 .player-hand {
@@ -58,13 +48,13 @@
 }
 
 .hands-title {
-  // height: 30vh;
   display: flex;
   align-items: flex-end;
   justify-content: center;
 
   h2 {
     margin: 0 3rem 0 3rem;
+    font-size: $text-size-xxl;
   }
 }
 
@@ -74,24 +64,13 @@
   justify-content: center;
 
   h3 {
+    font-size: $text-size-xl;
     margin: 1rem 3.5rem 1rem 3.1rem;
   }
 }
 
-button {
-  margin: 20px;
-  padding: 10px 20px;
-  font-size: 16px;
-}
-
-h2 {
-  margin-top: 20px;
-}
-
-.card-icon {
-  font-size: 4rem;
-}
-
-.hidden-card {
-  font-size: 3.5rem;
+.bet-text {
+  font-family: $heading-font;
+  font-size: $text-size;
+  font-weight: bold;
 }
