--- a/src/styling/input.scss
+++ b/src/styling/input.scss
@@ -1,7 +1,8 @@
 @import 'variables';
 
 input {
-  font-family: $base-font;
+  font-family: $body-content-font;
+  font-size: $text-size;
   height: 2rem;
   border: 2px solid $button-border-color;
   background-color: $button-bg-color;
