--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -1,31 +1,41 @@
 @import 'variables';
 
 .App {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
   max-height: 85vh;
-
-  h4 {
-    font-size: $text-size-xxl;
-    margin: 0;
-  }
 }
 
 .table {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
   width: 95%;
   height: 85vh;
   background-color: $base-background;
   border-radius: 500px;
   margin: 2rem auto;
   box-shadow: 0 0 0 2px #ffd700, 0 0 0 12px #673622, 0 0 0 18px #53220e;
+
+  h4 {
+    font-size: $text-size-xxl;
+    color: #ffd700;
+    margin: 0;
+  }
 }
 
 .section-outputs {
+  height: 40vh;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.section-inputs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
 }
 
 .hands {
