--- a/src/styling/button.scss
+++ b/src/styling/button.scss
@@ -4,9 +4,13 @@ button {
   font-family: $body-content-font;
   font-size: $text-size-xl;
   background-color: $button-bg-color;
-  border-color: $button-border-color;
+  // border-color: $button-border-color;
+
+  // border-width: medium;
+  max-height: 6vh;
+  border: 4px solid #53220e;
+  box-shadow: 5px 10px 0px 0px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  border-width: medium;
   font-weight: 600;
   margin: 20px;
   padding: 10px 20px;
