--- a/src/styling/input.scss
+++ b/src/styling/input.scss
@@ -1,11 +1,13 @@
 @import 'variables';
 
 input {
+  max-height: 4vh;
+  margin: 20px;
+  padding: 5px 10px;
+  border: 4px solid #53220e;
+  box-shadow: 5px 10px 0px 0px rgba(0, 0, 0, 0.5);
   font-family: $body-content-font;
   font-size: $text-size;
-  height: 2rem;
-  border: 2px solid $button-border-color;
   background-color: $button-bg-color;
   border-radius: 10px;
-  border-width: medium;
 }
