Improve styling simply

--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -84,3 +84,14 @@
   font-size: $text-size;
   font-weight: bold;
 }
+
+.game-message-container {
+  height: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.game-message {
+  margin: 0;
+}
