--- a/src/styling/input.scss
+++ b/src/styling/input.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 input {
-  max-height: 4vh;
+  height: 3.5vh;
   margin: 20px;
   padding: 5px 10px;
   border: 4px solid #53220e;
