Implement deck shuffling and auto-reshuffle when less than 10 cards remain

--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -95,3 +95,9 @@
 .game-message {
   margin: 0;
 }
+
+.background-text {
+  font-family: $heading-font;
+  font-size: $text-size-xl;
+  opacity: 0.7;
+}
