--- a/src/styling/_variables.scss
+++ b/src/styling/_variables.scss
@@ -3,12 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 // Colors
-$base-background: #006400;
+$table-background: #006400;
 $button-bg-color: #e0c29c;
-$button-border-color: black;
-$button-hover-color: red;
-$button-bg-hover: #232b2b;
-$button-hover-border: #27425d;
+$button-border-color: #ffd700;
+$button-hover-bg-color: #53220e;
 
 // Fonts
 $heading-font: 'Libre Baskerville', serif;
