--- a/src/styling/button.scss
+++ b/src/styling/button.scss
@@ -5,7 +5,7 @@ button {
   font-size: $text-size-xl;
   background-color: $button-bg-color;
   max-height: 6vh;
-  border: 4px solid #53220e;
+  border: 4px solid $button-hover-bg-color;
   box-shadow: 5px 10px 0px 0px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   font-weight: 600;
@@ -15,9 +15,9 @@ button {
 }
 
 button:hover {
-  color: #ffd700;
-  background-color: #53220e;
-  border-color: #ffd700;
+  color: $button-border-color;
+  background-color: $button-hover-bg-color;
+  border-color: $button-border-color;
   transform: scale(1.2);
   box-shadow: 10px 14px 0px 0px rgba(0, 0, 0, 0.5);
 }
