--- a/src/styling/input.scss
+++ b/src/styling/input.scss
@@ -4,7 +4,7 @@ input {
   height: 3.5vh;
   margin: 20px;
   padding: 5px 10px;
-  border: 4px solid #53220e;
+  border: 4px solid $button-hover-bg-color;
   box-shadow: 5px 10px 0px 0px rgba(0, 0, 0, 0.5);
   font-family: $body-content-font;
   font-size: $text-size;
